# python34

./: .gitignore  README
CMake/: CMakeLists.txt
CMake/python/: CMakeLists.txt
CMake/pythoncore/: CMakeLists.txt
Include/: patchlevel.h
Linux/: config.c  pyconfig.h
PCbuild/: pcbuild_minimal.sln  python.vcxproj  python.vcxproj.filters  python3dll.vcxproj  python3dll.vcxproj.filters  pythoncore.vcxproj  pythoncore.vcxproj.filters
Windows/: pyconfig.h
cmake/pythoncore/: CMakeLists.txt
src/platform/Linux/: pyconfig.h
src/platform/Windows/: config.c  pyconfig.h
