PROJECT( python_build C )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../dist" CACHE PATH "" FORCE )
SET( INSTALL_DESTINATION ${CMAKE_INSTALL_PREFIX} )

ADD_SUBDIRECTORY( pythoncore )
ADD_SUBDIRECTORY( python )

INSTALL( DIRECTORY ../Lib DESTINATION ${INSTALL_DESTINATION}/ )
