PROJECT( python_build C )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

IF( NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES )
    SET( CMAKE_BUILD_TYPE "Debug" )
ENDIF()

MESSAGE( "Build type is ${CMAKE_BUILD_TYPE}" )

SET( CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../dist" CACHE PATH "" FORCE )
SET( INSTALL_DESTINATION ${CMAKE_INSTALL_PREFIX} )

ADD_SUBDIRECTORY( pythoncore )
ADD_SUBDIRECTORY( python )

INSTALL( DIRECTORY ../Lib DESTINATION ${INSTALL_DESTINATION}/ )
