PROJECT( python C )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( python_headers )
SET( python_sources 
	../../Modules/python.c )



IF(CMAKE_GENERATOR MATCHES Visual*)
    INCLUDE_DIRECTORIES( ../../PC )
ELSE()
    INCLUDE_DIRECTORIES( ../../Linux )
ENDIF()

INCLUDE_DIRECTORIES( ../../Include )

ADD_DEFINITIONS( -D_CONSOLE )

ADD_EXECUTABLE( ${PROJECT_NAME} ${python_sources} ${python_headers} )

IF(CMAKE_GENERATOR MATCHES Visual*)
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} python34)
ELSE()
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME} python34 pthread m util dl)
ENDIF()

INSTALL( TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DESTINATION} )
